# envy

./: CMakeLists.txt  README.md  envyConfig.cmake.in  single_include.json
include/envy/: envy.hpp
single_include/envy/: envy.hpp
